Fix text footer on smaller sizes

--- a/src/views/Races/Sidebar/Sidebar.module.scss
+++ b/src/views/Races/Sidebar/Sidebar.module.scss
@@ -80,4 +80,18 @@
   color: var(--color-text-muted);
   display: flex;
   gap: 4px;
+  flex-wrap: wrap;
+}
+
+.footerTextSection {
+  display: flex;
+  gap: 4px;
+}
+
+.lonelyMiddleDot {
+  visibility: visible;
+
+  &.isHidden {
+    visibility: hidden;
+  }
 }
